-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 170404) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][-extraT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO)
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in 
                       preparation of major releases (optional)

-----------------------------------------------------------------------

xx052004 (v2.3.3)  -** stable release **-
	- note: verified to compile ok with gcc-3.4
	- added: eiam - 'map-ladspa-id-list' command
	- changed: lots of typo fixes and other corrections to 
	           the user's guide [ericdr]
	- changed: minor configure.in cleanup relating to handling
		   CFLAGS, CXXFLAGS and LDFLAGS
	- fixed: building against libsndfile-1.0.4 and older; if 
		 libsndfile older than 1.0.0 is detected, sndfile 
		 support is disabled altogether
	- fixed: bug in ECI C impl that could cause segfaults [mewe]
	- fixed: signal handling bugs in ecasignalview [mewe]
	- fixed: bug in ecasound(1) caused man to not show the
		 last three pages
	- fixed: bug in the daemon-mode (NetECI) protocol parser
		 that caused parsing long (over 32 chars) commands 
		 to fail
	- fixed: 'libecasound-config --libs' did not list all 
		 external libraries used
06122003 (v2.3.2)  -** stable release **-
	- edi-entries: edi-33 closed
	- added: support for libsndfile; enabled if libsndfile is
	         detected succesfully by configure; can be disabled
		 with --disable-sndfile
	- added: added new audio input/output types 'audiofile', 
		 'sndfile' and 'mikmod'; see ecasound(1) for more
		 details
	- added: pyecasound/test2_stresstest.py new test case 
	- added: initial Ruby ECI impl added; see rubyecasound/README 