@@ -1,4 +1,4 @@
-.TH "ecasound" "1" "18\&.04\&.2004" "" "Multimedia software" 
+.TH "ecasound" "1" "01\&.05\&.2004" "" "Multimedia software" 
 .PP 
 .SH "NAME" 
 ecasound \- sample editor, multitrack recorder, fx-processor, etc\&.
@@ -159,7 +159,8 @@ See section \fIGeneral chainsetup options\fP for details\&.
 Sets processing time in seconds (doesn\'t have to be an integer value)\&.
 If processing time isn\'t set, engine stops when all inputs are 
 finished\&. This option is equivalent to the \'cs-set-length\' EIAM
-command\&.
+command\&. A special-case value of \'-1\' will set the chainsetup length 
+according to the longest input object\&.
 .IP 
 .IP "-tl" 
 Enables looping\&. When processing is finished, engine will start 
